# CompSLOT

./: .gitignore  README.md  main.py  pyproject.toml  trainer.py
backbone/: linears.py  slot.py  vit_cprompt.py
exps/: aper_aperpter_cgqa.json  aper_aperpter_cobj.json  aper_aperpter_compslot_cgqa.json  aper_aperpter_compslot_cobj.json  cofima_cgqa.json  cofima_cobj.json  cofima_compslot_cgqa.json  cofima_compslot_cobj.json  cprompt_cgqa.json  cprompt_cobj.json  cprompt_compslot_cgqa.json  cprompt_compslot_cobj.json  der_cgqa.json  der_cobj.json  der_compslot_cgqa.json  der_compslot_cobj.json  ease_cgqa.json  ease_cobj.json  ease_compslot_cgqa.json  ease_compslot_cobj.json  foster_cgqa.json  foster_cobj.json  foster_compslot_cgqa.json  foster_compslot_cobj.json  memo_cgqa.json  memo_cobj.json  memo_compslot_cgqa.json  memo_compslot_cobj.json  ranpac_cgqa.json  ranpac_cobj.json  ranpac_compslot_cgqa.json  ranpac_compslot_cobj.json  slot_cgqa.json  slot_cobj.json
models/: aper_adapter.py  base.py  cofima.py  cprompt.py  der.py  ease.py  foster.py  memo.py  ranpac.py  slot_learner.py
utils/: CFST_data.py  data.py  data_manager.py  factory.py  inc_net.py  toolkit.py
